--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,34 +7,41 @@
 
     <TextView
         android:id="@+id/TitleTeamA"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Team A"
-        android:textSize="45sp" />
+        android:textSize="45sp"
+        android:gravity="center_horizontal"
+        android:padding="4dp"/>
 
     <TextView
         android:id="@+id/Score"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="0"
-        android:textSize="45sp" />
+        android:textSize="45sp"
+        android:gravity="center_horizontal"
+        android:padding="4dp"/>
 
     <Button
         android:id="@+id/ThreePoints"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="+3 Points" />
+        android:text="+3 Points"
+        android:layout_margin="8dp"/>
 
     <Button
         android:id="@+id/TwoPoints"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="+2 Points" />
+        android:text="+2 Points"
+        android:layout_margin="8dp"/>
 
     <Button
         android:id="@+id/OnePoint"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="+1 Points" />
+        android:text="Free Throw"
+        android:layout_margin="8dp"/>
 
 </LinearLayout>
