--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,12 @@
         android:padding="4dp"/>
 
     <Button
-        android:id="@+id/three_points_button"
+        android:id="@+id/three_pointer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="+3 Points"
-        android:layout_margin="8dp"/>
+        android:layout_margin="8dp"
+        android:onClick="addThreePointsTeamA" />
 
     <Button
         android:id="@+id/two_points_button"
